31-ingress-spring/first-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: socket-test-first-pod
  labels:
    name: socket-test-first-pod
    app: java
spec:
  containers:
    - name: socket-test-first-pod
      image: socket-test:v1
      ports:
        - containerPort: 8080
