31-ingress-spring/first-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: socket-test-first-svc
  labels:
    name: socket-test-first-svc
    app: service
spec:
  selector:
    name: socket-test-first-pod
    app: java
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
