31-ingress-spring/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://kubernetes.docker.internal"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/ingress-class: "nginx"
    nginx.ingress.kubernetes.io/ingress-nginx-controller-host: kubernetes.docker.internal
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /first
        pathType: Prefix
        backend:
          service:
            name: socket-test-first-svc
            port:
              number: 8080
      - path: /second
        pathType: Prefix
        backend:
          service:
            name: socket-test-second-svc
            port:
              number: 8080
